# leptos-tauri-playground

./: Cargo.toml  styles.css
shared-model/: Cargo.toml
shared-model/src/: lib.rs
src/: app.rs  main.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: error.rs  error_template.rs  file_writer.rs  greet.rs  mod.rs
