[package]
name = "tauri-playground-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.5", features = ["csr"] }
leptos_macro = "*"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

thiserror = "1.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }

shared-model = { path = "shared-model" }

[workspace]
members = ["src-tauri", "shared-model"]
